# apps/api/src/app.module.ts
@@ -9,6 +9,7 @@ import { SessionModule } from './common/session/session.module';
 import { CoreModule } from './core.module';
 import { DatabaseModule } from './database/database.module';
 import { HealthModule } from './health/health.module';
+import { AuditLogModule } from './modules/audit/audit-log.module';
 import { AuthModule } from './modules/auth/auth.module';
 import { MeModule } from './modules/me/me.module';
 import { SchoolModule } from './modules/school/school.module';
@@ -79,6 +80,7 @@ export class AppModule {
         MeModule,
         UsersModule,
         SchoolModule,
+        AuditLogModule,
         EnquiryModule,
         ...(overrides.testModules ?? []),
       ],
